               and adjust counts to include solvent.  Add consolidated loader for BIRD data, add loader for DrugBank
               corresponding data from rcsb.utils.chemref.    Add CLI option for loading integrated chemical reference data.
               Move time consuming schema validation tests to seperate subdirectory.  Add mandatory option for injected
               private keys.  Resolve schema loading issues with current chemical component and BIRD definitions.
 12-Dec-2018   V0.34 Add rcsb_entity_id identifiers in categories struct_ref_seq and struct_ref_seq_dif.Add category rcsb_entity_poly_info
               as the basis for a new core collection core_entity_monomer. Adjust logic for reporting assembly format availibility.
 13-Dec-2018   V0.35 Add ihm_dev collection and support for I/HM repository model files
 18-Dec-2018   V0.36 Add _entity_poly.rcsb_prd_id and configuration to include private key for BIRD identifier in the core_entity collection.'
  7-Jan-2019   V0.37 Simplify and consolidate site specific configuration options, streamline cli scripts, and consolidate common
               schema access and building methods in SchemDefUtil() (feature branch configpath)
  9-Jan-2019   V0.38 Introduce a new data transformation filter for XML character references and miscellaneous related changes.
 10-Jan-2019   V0.39 Adjustments to improve diagnostics relative remaining data issues observed loading latest data files, and
               tuning of classification for RCSB candidate assemblies.
 17-Jan-2019   V0.40 adjust handling of document replacement in sliced collections
 25-Jan-2019   V0.41 schema extension for DrugBank core collection
 16-Feb-2019   V0.42 Add entity_instance_core support, add content type merging feature to allow consolidation of data artifacts
               prior to data load processing, and overhaul the slice processing to improve performance.
 18-Feb-2019   V0.43 provide a more graceful handling of empty slices

#